--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,26 @@
-name: Run Django Migrations
+name: Django Deploy
 
 on:
   push:
     branches:
-      - main  # замените на вашу ветку, если нужно
+      - main  # или другая ветка, если у тебя иначе
 
 jobs:
-  migrate:
+  deploy:
     runs-on: ubuntu-latest
 
+    env:
+      DJANGO_SETTINGS_MODULE: project.settings
+      ALLOWED_HOSTS: "127.0.0.1,localhost"
+      DEBUG: "True"
+      SECRET_KEY: "fake-secret-for-build"  # безопасно, если он не попадает в прод
+
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.12'
 
@@ -23,9 +29,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run migrations
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}  # Railway должен создать такую переменную
+    - name: Run makemigrations
       run: |
         python manage.py makemigrations
+
+    - name: Run migrate
+      run: |
         python manage.py migrate
+
+    - name: Collect static files
+      run: |
+        python manage.py collectstatic --noinput
+
