--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
 
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      ALLOWED_HOSTS=localhost,127.0.0.1
 
     steps:
     - uses: actions/checkout@v3
